Update publish directory to root in netlify.toml

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  publish = "src"
+  publish = "."
   command = "npx tailwindcss -i ./src/input.css -o ./src/output.css --minify"
 
 [[redirects]]
